# dcleaner

./: .gitignore  CHANGELOG.md  README.md  dcleaner.py  pyproject.toml
.github/workflows/: ci.yml
dclean/: __init__.py  core.py
examples/: with_dcleaner.ipynb  without_dcleaner.ipynb
tests/: __init__.py  test_core.py
tests/data/: sample.csv
