[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcleaner"
version = "0.1.0"
description = "Fluent, low-boilerplate data cleaning and visualization on top of pandas."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "shiv" }]
keywords = ["pandas", "data-cleaning", "visualization", "data-science", "eda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=1.3",
    "matplotlib>=3.5",
    "numpy>=1.21",
]

[project.urls]
Homepage = "https://github.com/Shivmahlan/dcleaner"
Repository = "https://github.com/Shivmahlan/dcleaner"

[tool.setuptools.packages.find]
where = ["."]
include = ["dclean*"]
